Fix seperator breaking on firefox

--- a/src/main.scss
+++ b/src/main.scss
@@ -521,7 +521,7 @@ section {
 .seperator {
   position: relative;
   top: 20px;
-  width: fit-content;
+  width: min-content;
   left: 50%;
   padding: 10px;
   margin: 0;
